History of this buildout
========================

NOTE: This is now a maintenance branch as long as Minaraad is still
hosted by Zest.  Trunk (4.x) will be used in Belgium on the LNE
servers, using RelStorage.  Any changes done in this maintenance
branch must be ported to trunk as well.


3.30 (unreleased)
-----------------

- Put the linkedin javascript src right above the div that uses it.
  This way in case of connection problems the rest of the page until
  that point is at least rendered.
  [maurits]

- Use fresh collective.emaillogin 1.0, which is less case sensitive.
  Has an upgrade step to migrate existing email logins to all lower
  case.
  [maurits]

- The advisory type for a project is now 'Unanimous' or 'Abstention
  and/or reject points'. [vincent]

- Added automatic numbering of attachments in agenda items [vincent]

- Changed the existing advisory migration to now migrate a few
  specific folders from the old digibib to projects.
  [maurits]

- When creating an advisory from a project, use the delivery date as
  the main date, instead of the advisory date.
  Fixes http://projects.zestsoftware.nl/mina-raad/issues/21
  [maurits]


3.29 (2011-11-14)
-----------------

- zserver-threads = 3
  [maurits]


3.28 (2011-11-10)
-----------------

- Completely removed old startdate and enddate fields from Hearing and
  MREvent, as they were only confusing.  Also removed the migration
  code and tests related to those fields.
  [maurits]

- Replaced remaining context.enddate usage with context.get_end_time().
  [maurits]

- Replaced remaining context.startdate usage with context.getStart_time().
  [maurits]

- Replaced remaining getStartdate calls with getStart_time.
  [maurits]

- Replaced remaining getEnddate calls with get_end_time.
  [maurits]


3.27 (2011-11-09)
-----------------

- Avoid UnicodeDecodeError when exporting subscribers.
  [maurits]

- Fixed AttributeError when deleting a normal file from a meeting.